--- a/src/vscp/vscpworks/vscpworks.vcxproj
+++ b/src/vscp/vscpworks/vscpworks.vcxproj
@@ -122,14 +122,14 @@
     <ClInclude Include="bootdevice_pic1.h" />
     <ClInclude Include="bootdevice_vscp.h" />
     <ClInclude Include="devicebootloaderwizard.h" />
-    <ClInclude Include="dialogabstractionedit.h" />
-    <ClInclude Include="dialogeditlevelidmrow.h" />
-    <ClInclude Include="dialogsetfiltermask.h" />
     <ClInclude Include="dlgabout.h" />
     <ClInclude Include="dlgabout_symbols.h" />
+    <ClInclude Include="dlgabstractionedit.h" />
     <ClInclude Include="dlgconfiguration.h" />
+    <ClInclude Include="dlgeditlevel1dmrow.h" />
     <ClInclude Include="dlgnewvscpsession.h" />
     <ClInclude Include="dlgselectdaemoninterface.h" />
+    <ClInclude Include="dlgsetfiltermask.h" />
     <ClInclude Include="dlgvscpfilter.h" />
     <ClInclude Include="dlgvscpinterfacesettings.h" />
     <ClInclude Include="dlgvscpmsg.h" />
@@ -170,13 +170,13 @@
     <ClCompile Include="bootdevice_pic1.cpp" />
     <ClCompile Include="bootdevice_vscp.cpp" />
     <ClCompile Include="devicebootloaderwizard.cpp" />
-    <ClCompile Include="dialogabstractionedit.cpp" />
-    <ClCompile Include="dialogeditlevelidmrow.cpp" />
-    <ClCompile Include="dialogsetfiltermask.cpp" />
     <ClCompile Include="dlgabout.cpp" />
+    <ClCompile Include="dlgabstractionedit.cpp" />
     <ClCompile Include="dlgconfiguration.cpp" />
+    <ClCompile Include="dlgeditlevel1dmrow.cpp" />
     <ClCompile Include="dlgnewvscpsession.cpp" />
     <ClCompile Include="dlgselectdaemoninterface.cpp" />
+    <ClCompile Include="dlgsetfiltermask.cpp" />
     <ClCompile Include="dlgvscpfilter.cpp" />
     <ClCompile Include="dlgvscpinterfacesettings.cpp" />
     <ClCompile Include="dlgvscpmsg.cpp" />
