--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -10,9 +10,9 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
-CXXFLAGS = @CXXFLAGS@ -fPIC
+CXXFLAGS = @CXXFLAGS@ -I../common -I../../common -fPIC
 CPPFLAGS = @CPPFLAGS@ -fPIC
-CFLAGS = -fPIC
+CFLAGS = -I../common -I../../common -fPIC
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC
