--- a/src/vscp/drivers/level2/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level2/logger/linux/Makefile.in
@@ -10,9 +10,9 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
-CXXFLAGS = @CXXFLAGS@ -D__LINUX__ -fPIC
-CPPFLAGS = @CPPFLAGS@
-CFLAGS = @CFLAGS@ -D__LINUX__ -fPIC
+CXXFLAGS = @CXXFLAGS@ -D__LINUX__ -fPIC -I../../../../common -I../../../../../common
+CPPFLAGS = @CPPFLAGS@ -I../../../../common -I../../../../../common
+CFLAGS = @CFLAGS@ -D__LINUX__ -fPIC -I../../../../common -I../../../../../common
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC -Wl,--no-undefined
